--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.AppDevSneha"
         tools:targetApi="31">
         <activity
-            android:name=".sampledata.main.MainActivity"
+            android:name=".activity.edit_note.EditNote"
+            android:exported="false" />
+        <activity
+            android:name=".activity.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
