--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppDevSneha"
         tools:targetApi="31">
         <activity
+            android:name=".activity.quiz.QuizMain"
+            android:exported="false" />
+        <activity
             android:name=".activity.edit_note.EditNote"
             android:exported="false" />
         <activity
