--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppDevSneha"
         tools:targetApi="31">
+
+        <activity
+            android:name=".activity.main.SignupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.main.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.quiz.QuizPreviousActivity"
             android:exported="false" />
@@ -26,13 +40,8 @@
             android:exported="false" />
         <activity
             android:name=".activity.main.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
     </application>
+
 
 </manifest>
