--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppDevSneha"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activity.main.ProfileUpdateActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.main.SignupActivity"
             android:exported="false" />
@@ -42,6 +44,5 @@
             android:name=".activity.main.MainActivity"
             android:exported="true" />
     </application>
-
 
 </manifest>
